--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,520 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Koulen&family=Kumar+One&family=Madimi+One&family=Oswald:wght@200..700&family=Rubik+Glitch+Pop&family=Titillium+Web:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&family=Inter:wght@100..900&family=Koulen&family=Kumar+One&family=Madimi+One&family=Oswald:wght@200..700&family=Rubik+Glitch+Pop&family=Titillium+Web:wght@200&display=swap");
+body {
+  margin: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@media screen and (min-width: 1400px) {
+  body .topBar {
+    display: flex;
+    flex-flow: row;
+    background: black;
+    padding: 0 6rem;
+  }
+  body .topBar .logo {
+    display: flex;
+    flex-flow: row;
+    color: white;
+    font-family: "Koulen", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  body .topBar .logo .d,
+  body .topBar .logo .e,
+  body .topBar .logo .r,
+  body .topBar .logo .y {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+  }
+  body .topBar .logo .d .main-logo,
+  body .topBar .logo .e .main-logo,
+  body .topBar .logo .r .main-logo,
+  body .topBar .logo .y .main-logo {
+    margin: 0;
+    font-size: 3rem;
+    height: 4rem;
+  }
+  body .topBar .logo .d .sub-logo,
+  body .topBar .logo .e .sub-logo,
+  body .topBar .logo .r .sub-logo,
+  body .topBar .logo .y .sub-logo {
+    margin: 0;
+    font-size: 0.9rem;
+  }
+  body .title {
+    padding: 0 6rem;
+    font-family: "Abhaya Libre", serif;
+    font-weight: 800;
+    font-style: normal;
+    font-size: 1.5rem;
+  }
+  body .container {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    padding: 0 6rem;
+  }
+  body .container .converter {
+    display: flex;
+    flex-flow: row;
+    height: 30vh;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 2px 2px 20px #b3b3b3;
+    justify-content: space-between;
+    align-items: center;
+  }
+  body .container .converter .currency-selector {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 16rem;
+    border: 1px solid #9b9b9b;
+    border-radius: 5px;
+    padding: 0 1rem;
+  }
+  body .container .converter .currency-selector .country-details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 6rem;
+  }
+  body .container .converter .currency-selector .country-details .flag-img {
+    height: 2rem;
+  }
+  body .container .converter .currency-selector .country-details h3 {
+    font-family: Arial, serif;
+  }
+  body .container .converter .currency-selector select {
+    border: none;
+    font-size: 1rem;
+    width: 9rem;
+  }
+  body .container .converter .swap-button {
+    cursor: pointer;
+    height: 1rem;
+    padding: 1rem;
+    border-radius: 2rem;
+  }
+  body .container .converter .swap-button:hover, body .container .converter .swap-button:active {
+    background: #E5E5E5;
+  }
+  body .container .converter .input {
+    padding: 0 1rem;
+    margin-top: 2rem;
+    width: 16rem;
+    height: 3.6rem;
+    border: none;
+    border-bottom: 1px solid #8b8b8b;
+    background: #E5E5E5;
+    font-weight: normal;
+    font-size: 1.5rem;
+    color: black;
+  }
+  body .container .converter .frequent-buttons {
+    display: flex;
+  }
+  body .container .converter .frequent-buttons .button {
+    padding: 0.6rem;
+    margin: 0.5rem;
+    border-radius: 2rem;
+    font-size: 0.8rem;
+    cursor: pointer;
+  }
+  body .container .converter .frequent-buttons .button:hover, body .container .converter .frequent-buttons .button:active {
+    background: #E5E5E5;
+  }
+  body .container #notes {
+    width: 25rem;
+    height: 55vh;
+    padding: 2rem;
+    resize: none;
+    border-radius: 10px;
+  }
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (min-width: 1100px) and (max-width: 1400px) {
+  body .topBar {
+    display: flex;
+    flex-flow: row;
+    background: black;
+    padding: 0 6rem;
+  }
+  body .topBar .logo {
+    display: flex;
+    flex-flow: row;
+    color: white;
+    font-family: "Koulen", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  body .topBar .logo .d,
+  body .topBar .logo .e,
+  body .topBar .logo .r,
+  body .topBar .logo .y {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+  }
+  body .topBar .logo .d .main-logo,
+  body .topBar .logo .e .main-logo,
+  body .topBar .logo .r .main-logo,
+  body .topBar .logo .y .main-logo {
+    margin: 0;
+    font-size: 3rem;
+    height: 4rem;
+  }
+  body .topBar .logo .d .sub-logo,
+  body .topBar .logo .e .sub-logo,
+  body .topBar .logo .r .sub-logo,
+  body .topBar .logo .y .sub-logo {
+    margin: 0;
+    font-size: 0.9rem;
+  }
+  body .title {
+    padding: 0 6rem;
+    font-family: "Abhaya Libre", serif;
+    font-weight: 800;
+    font-style: normal;
+    font-size: 1.5rem;
+  }
+  body .container {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    padding: 0 6rem;
+  }
+  body .container .converter {
+    display: flex;
+    flex-flow: row;
+    height: 30vh;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 2px 2px 20px #b3b3b3;
+    justify-content: space-between;
+    align-items: center;
+  }
+  body .container .converter .currency-selector {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 16rem;
+    border: 1px solid #9b9b9b;
+    border-radius: 5px;
+    padding: 0 1rem;
+  }
+  body .container .converter .currency-selector .country-details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 6rem;
+  }
+  body .container .converter .currency-selector .country-details .flag-img {
+    height: 2rem;
+  }
+  body .container .converter .currency-selector .country-details h3 {
+    font-family: Arial, serif;
+  }
+  body .container .converter .currency-selector select {
+    border: none;
+    font-size: 1rem;
+    width: 9rem;
+  }
+  body .container .converter .swap-button {
+    cursor: pointer;
+    height: 1rem;
+    padding: 1rem;
+    border-radius: 2rem;
+  }
+  body .container .converter .swap-button:hover, body .container .converter .swap-button:active {
+    background: #E5E5E5;
+  }
+  body .container .converter .input {
+    padding: 0 1rem;
+    margin-top: 2rem;
+    width: 16rem;
+    height: 3.6rem;
+    border: none;
+    border-bottom: 1px solid #8b8b8b;
+    background: #E5E5E5;
+    font-weight: normal;
+    font-size: 1.5rem;
+    color: black;
+  }
+  body .container .converter .frequent-buttons {
+    display: flex;
+  }
+  body .container .converter .frequent-buttons .button {
+    padding: 0.6rem;
+    margin: 0.5rem;
+    border-radius: 2rem;
+    font-size: 0.8rem;
+    cursor: pointer;
+  }
+  body .container .converter .frequent-buttons .button:hover, body .container .converter .frequent-buttons .button:active {
+    background: #E5E5E5;
+  }
+  body .container #notes {
+    width: 30vw;
+    margin-left: 2rem;
+    height: 55vh;
+    padding: 2rem;
+    resize: none;
+    border-radius: 10px;
+  }
+}
+@media screen and (min-width: 700px) and (max-width: 1099px) {
+  body .topBar {
+    display: flex;
+    flex-flow: row;
+    background: black;
+    padding: 0 5vw;
+    width: 90vw;
+  }
+  body .topBar .logo {
+    display: flex;
+    flex-flow: row;
+    color: white;
+    font-family: "Koulen", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  body .topBar .logo .d,
+  body .topBar .logo .e,
+  body .topBar .logo .r,
+  body .topBar .logo .y {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+  }
+  body .topBar .logo .d .main-logo,
+  body .topBar .logo .e .main-logo,
+  body .topBar .logo .r .main-logo,
+  body .topBar .logo .y .main-logo {
+    margin: 0;
+    font-size: 3rem;
+    height: 4rem;
+  }
+  body .topBar .logo .d .sub-logo,
+  body .topBar .logo .e .sub-logo,
+  body .topBar .logo .r .sub-logo,
+  body .topBar .logo .y .sub-logo {
+    margin: 0;
+    font-size: 0.9rem;
+  }
+  body .title {
+    padding: 0 5vw;
+    width: 90vw;
+    font-family: "Abhaya Libre", serif;
+    font-weight: 800;
+    font-style: normal;
+    font-size: 1.5rem;
+  }
+  body .container {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    padding: 0 5vw;
+  }
+  body .container .converter {
+    display: flex;
+    flex-flow: row;
+    height: 30vh;
+    width: 90vw;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 2px 2px 20px #b3b3b3;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 700px) and (max-width: 1099px) and (orientation: landscape) {
+  body .container .converter {
+    height: 40vh;
+  }
+}
+@media screen and (min-width: 700px) and (max-width: 1099px) {
+  body .container .converter .currency-selector {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 30vw;
+    border: 1px solid #9b9b9b;
+    border-radius: 5px;
+    padding: 0 1rem;
+  }
+  body .container .converter .currency-selector .country-details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 5rem;
+  }
+  body .container .converter .currency-selector .country-details .flag-img {
+    height: 1.5rem;
+  }
+  body .container .converter .currency-selector .country-details h3 {
+    font-family: Arial, serif;
+  }
+  body .container .converter .currency-selector select {
+    border: none;
+    font-size: 1rem;
+    width: 18vw;
+  }
+  body .container .converter .swap-button {
+    cursor: pointer;
+    height: 1rem;
+    padding: 1rem;
+    border-radius: 2rem;
+  }
+  body .container .converter .input {
+    padding: 0 1rem;
+    margin-top: 2rem;
+    width: 30vw;
+    height: 3.6rem;
+    border: none;
+    border-bottom: 1px solid #8b8b8b;
+    background: #E5E5E5;
+    font-weight: normal;
+    font-size: 1.5rem;
+    color: black;
+  }
+  body .container .converter .frequent-buttons {
+    display: flex;
+  }
+  body .container .converter .frequent-buttons .button {
+    padding: 0.6rem;
+    margin: 0.5rem;
+    border-radius: 2rem;
+    font-size: 0.8rem;
+    cursor: pointer;
+  }
+  body .container #notes {
+    display: none;
+  }
+}
+@media screen and (min-width: 200px) and (max-width: 699px) {
+  body .topBar {
+    display: flex;
+    flex-flow: row;
+    background: black;
+    padding: 0 10vw;
+  }
+  body .topBar .logo {
+    display: flex;
+    flex-flow: row;
+    color: white;
+    font-family: "Koulen", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  body .topBar .logo .d,
+  body .topBar .logo .e,
+  body .topBar .logo .r,
+  body .topBar .logo .y {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+  }
+  body .topBar .logo .d .main-logo,
+  body .topBar .logo .e .main-logo,
+  body .topBar .logo .r .main-logo,
+  body .topBar .logo .y .main-logo {
+    margin: 0;
+    font-size: 3rem;
+    height: 4rem;
+  }
+  body .topBar .logo .d .sub-logo,
+  body .topBar .logo .e .sub-logo,
+  body .topBar .logo .r .sub-logo,
+  body .topBar .logo .y .sub-logo {
+    margin: 0;
+    font-size: 0.9rem;
+  }
+  body .title {
+    padding: 0 10vw;
+    font-family: "Abhaya Libre", serif;
+    font-weight: 800;
+    font-style: normal;
+    font-size: 1rem;
+  }
+  body .container {
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+    padding: 0 10vw;
+  }
+  body .container .converter {
+    display: flex;
+    flex-flow: column;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 2px 2px 20px #b3b3b3;
+    justify-content: space-between;
+    align-items: center;
+  }
+  body .container .converter .currency-selector {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #9b9b9b;
+    border-radius: 5px;
+    padding: 0 1rem;
+  }
+  body .container .converter .currency-selector .country-details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 5rem;
+  }
+  body .container .converter .currency-selector .country-details .flag-img {
+    height: 1.5rem;
+  }
+  body .container .converter .currency-selector .country-details h3 {
+    font-family: Arial, serif;
+  }
+  body .container .converter .currency-selector select {
+    border: none;
+    font-size: 1rem;
+    width: 35vw;
+  }
+  body .container .converter .swap-button {
+    cursor: pointer;
+    height: 1rem;
+    padding: 1rem;
+    border-radius: 2rem;
+  }
+  body .container .converter .input {
+    padding: 0 1rem;
+    margin-top: 2rem;
+    height: 3.6rem;
+    width: 60vw;
+    border: none;
+    border-bottom: 1px solid #8b8b8b;
+    background: #E5E5E5;
+    font-weight: normal;
+    font-size: 1.5rem;
+    color: black;
+  }
+  body .container .converter .frequent-buttons {
+    display: flex;
+  }
+  body .container .converter .frequent-buttons .button {
+    padding: 0.6rem;
+    margin: 0.5rem;
+    border-radius: 2rem;
+    font-size: 0.8rem;
+    cursor: pointer;
+  }
+  body .container #notes {
+    display: none;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*# sourceMappingURL=App.css.map */
